tests/specs/ecosystem/poolifier/poolifier/3_1_29.test
poolifier/poolifier/3.1.29
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'T[]'.
  public push(...items: T[]): number {
         ~~~~
    at file://<tmpdir>/src/circular-array.ts:13:10

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'T[]'.
  public unshift(...items: T[]): number {
         ~~~~~~~
    at file://<tmpdir>/src/circular-array.ts:17:10

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'T[]'.
  public concat(...items: Array<T | ConcatArray<T>>): CircularArray<T> {
         ~~~~~~
    at file://<tmpdir>/src/circular-array.ts:21:10

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'T[]'.
  public splice(start: number, deleteCount?: number, ...items: T[]): CircularArray<T> {
         ~~~~~~
    at file://<tmpdir>/src/circular-array.ts:25:10

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'FixedClusterPool<Data, Response>'.
  protected shallCreateDynamicWorker(): boolean {
            ~~~~~~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/pools/cluster/dynamic.ts:30:13

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'FixedClusterPool<Data, Response>'.
  protected checkAndEmitDynamicWorkerCreationEvents(): void {}
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/pools/cluster/dynamic.ts:34:13

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'FixedClusterPool<Data, Response>'.
  protected get type(): PoolType {
                ~~~~
    at file://<tmpdir>/src/pools/cluster/dynamic.ts:36:17

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'FixedClusterPool<Data, Response>'.
  protected get busy(): boolean {
                ~~~~
    at file://<tmpdir>/src/pools/cluster/dynamic.ts:40:17

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'AbstractPool<Worker, Data, Response>'.
  protected setupHook(): void {}
            ~~~~~~~~~
    at file://<tmpdir>/src/pools/cluster/fixed.ts:33:13

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'FixedThreadPool<Data, Response>'.
  protected shallCreateDynamicWorker(): boolean {
            ~~~~~~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/pools/thread/dynamic.ts:30:13

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'FixedThreadPool<Data, Response>'.
  protected checkAndEmitDynamicWorkerCreationEvents(): void {}
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/pools/thread/dynamic.ts:34:13

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'FixedThreadPool<Data, Response>'.
  protected get type(): PoolType {
                ~~~~
    at file://<tmpdir>/src/pools/thread/dynamic.ts:36:17

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'FixedThreadPool<Data, Response>'.
  protected get busy(): boolean {
                ~~~~
    at file://<tmpdir>/src/pools/thread/dynamic.ts:40:17

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'AbstractWorker<MessagePort, Data, Response>'.
  protected handleKillMessage(message: MessageValue<Data>): void {}
            ~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/worker/thread-worker.ts:40:13

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'AbstractWorker<MessagePort, Data, Response>'.
  protected handleError(error: Error | string): string {
            ~~~~~~~~~~~
    at file://<tmpdir>/src/worker/thread-worker.ts:51:13

Found 15 errors.

error: Type checking failed.

